# gix-benchmarks

./: Cargo.toml  README.md  benchmark-git-rev-list.patch  plot_benchmark.py  run_benchmark.py
.github/: dependabot.yml
.github/workflows/: dependabot.yml
src/: backend.rs  git_backend.rs  gix_backend.rs  main.rs
