[package]
name = "gix-benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
git2 = "0.20.1"
gix = { version = "0.71.0", default-features = false, features = [
    "max-performance",
    "revision",
    "blob-diff"
] }
gix-blame = "0.1.0"
