[package]
name = "gix-benchmarks"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
git2 = "0.20.1"
gix = { version = "0.75.0", default-features = false, features = [
    "max-performance",
    "revision",
    "blob-diff"
] }
gix-blame = "0.5.0"
